[gd_scene load_steps=2 format=3 uid="uid://debug_console"]

[ext_resource type="Script" path="res://src/ui/debug_console.gd" id="1_debug"]

[node name="DebugConsole" type="Control"]
anchor_right = 0.4
custom_minimum_size = Vector2(400, 40)
script = ExtResource("1_debug")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 4

[node name="OutputLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="InputField" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Type 'help' for commands..."
caret_blink = true